Fixed UI on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -46,5 +46,5 @@ body {
 }
 
 #root {
-  min-height: 100vh;
+  min-height: 100dvh;
 }
